apps/ewallet/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-svcss
spec:
  selector:
    app: watson-app
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
