apps/ewallet/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ing
spec:
  rules:
  - host:  watsoncluster.eu-central.containers.mybluemix.net
    http:
      paths:
      - path: /
        backend:
          serviceName: my-svcss
          servicePort: 80
